# collabothon2023-backend

./: .gitignore  Dockerfile  README.md  docker-compose.local.yml  entrypoint.dev.sh  pyproject.toml
backend/: environment.py  main.py
backend/auth/: router.py  session.py
backend/commerzbank_apis/: client.py
